fix alignment issue with QualificationsList and adjacent Button

--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -1,8 +1,7 @@
 .section-dark {
   background-color: #242424;
-  height: 75vh;
+  /* height: 75vh; */
   color: #fff;
-  margin-bottom: -40px;
 }
 
 .long {
@@ -51,7 +50,7 @@ i {
 .text-container {
   display: flex;
   flex-direction: column;
-  align-items: flex-start
+  align-items: flex-start;
 }
 
 .text-container > h2 {
